--- a/game.html
+++ b/game.html
@@ -13,6 +13,22 @@
 <body>
     <div class="container">
         <div id="game" class="justify-center flex-column">
+            <div id="questionInfo">
+                <div id="questionInfo-item">
+                    <p class="questionInfo-prefix">
+                        Question
+                    </p>
+                    <h1 class="questionInfo-main-text" id="questionCounter"></h1>
+                </div>
+            <div id="questionInfo-item">
+                    <p class="questionInfo-prefix">
+                        Category
+                    </p>
+                    <h1 class="questionInfo-main-text" id="category">
+                        ?
+                    </h1>
+                </div>
+            </div>
             <h2 id="question">What is the correct answer?</h2>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
@@ -32,7 +48,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="game.js"></script>
 </body>
 
 </html>
