Added if statement for display of results when quiz over

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz Application</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -62,8 +62,8 @@
 
         <!-- Game Over-->
         <div id="end" class="container flex-center flex-column">
-            <h2>The Quiz is Over</h2>
-            <p id="results"></p>
+            <h2 id="results-main"></h2>
+            <p id="results-p"></p>
             <form action="/index.html">
                 <button type="submit" class="btn">Home</button>
             </form>
