--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             </form>
         </div>
     </div>
+    <script src="readmyjson.js"></script>
     <script src="game.js"></script>
 </body>
 
