changed the answering system to allow to select several answers for all questions

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 <p class="choice-prefix">D</p>
                 <p class="choice-text">Choice 4</p>
             </div>
+            <button id="previous-button">Previous</button>
+            <button id="next-button">Next</button>
         </div>
 
         <!-- Game Over-->
