created new questions for json file and added methods to quiz class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="text" class="text-center" id="userName" placeholder="Unknown" value="Unknown">
             <label for="amountQuestion">How many questions do you want?</label>
             <input type="number" class="text-center" id="amountQuestion" value="1" min="1" max="10">
-            <button type="submit" class="btn" onclick="playQuiz();">Start</button>
+            <button type="submit" class="btn" onclick="quiz1.playQuiz();">Start</button>
         </div>
 
         <!-- Game Display-->
@@ -58,7 +58,6 @@
                 <p class="choice-prefix">D</p>
                 <p class="choice-text">Choice 4</p>
             </div>
-            <button id="previous-button">Previous</button>
             <button id="next-button">Next</button>
         </div>
 
