--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div id="homeMenu" class="container flex-center flex-column">
             <h1>Quiz</h1>
             <label for="userName">Name:</label>
-            <input type="text" class="text-center" id="userName" placeholder="Unknown" value="Unknown">
+            <input type="text" class="text-center" id="userName" placeholder="Player" value="Player">
             <label for="amountQuestion">How many questions do you want?</label>
             <input type="number" class="text-center" id="amountQuestion" value="1" min="1" max="10">
-            <button type="submit" class="btn" onclick="quiz1.playQuiz();">Start</button>
+            <button type="submit" class="btn" onclick="quiz.playQuiz();">Start</button>
         </div>
 
         <!-- Game Display-->
@@ -58,7 +58,7 @@
                 <p class="choice-prefix">D</p>
                 <p class="choice-text">Choice 4</p>
             </div>
-            <button id="next-button">Next</button>
+            <button class="btn" id="next-button">Next</button>
         </div>
 
         <!-- Game Over-->
